--- a/.github/workflows/python_inter.yaml
+++ b/.github/workflows/python_inter.yaml
@@ -56,8 +56,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../../requirements.txt      
+        pip install -r requirement.txt      
       
     - name: Run Python script with inputs
       run: |
-        python ../../create_team_add_maintanier.py "${{ steps.inputs.outputs.input1 }}" "${{ steps.inputs.outputs.input2 }}"
+        python create_team_add_maintanier.py "${{ steps.inputs.outputs.input1 }}" "${{ steps.inputs.outputs.input2 }}"
